--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,24 @@
 {
-    "manifest_version": 2,
-    "name": "ExistenZilence",
-    "version": "0.0.2",
-    "description": "Håll käft, jobbiga jävel",
-    "icons": {
-        "48": "icons/existenz-48.png",
-        "96": "icons/existenz-96.png"
-    },
-
-    "permissions": [
-      "activeTab"
-    ],
-  
-    "browser_action": {
-      "default_icon": "icons/existenz-32.png",
-      "default_title": "ExistenZilence",
-      "default_popup": "popup/ignore_menu.html"
+  "manifest_version": 2,
+  "name": "ExistenZilence",
+  "version": "0.0.2",
+  "description": "Håll käft, jobbiga jävel",
+  "icons": {
+    "48": "icons/existenz-48.png",
+    "96": "icons/existenz-96.png"
+  },
+  "permissions": [
+    "activeTab", "storage"
+  ],
+  "browser_action": {
+    "default_icon": "icons/existenz-32.png",
+    "default_title": "ExistenZilence",
+    "default_popup": "popup/ignore_menu.html"
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*.existenz.se/?p=komment*"],
+      "js": ["content_scripts/existenzilence.js"]
     }
-} 
+  ]
+}
